--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -53,5 +53,5 @@ jobs:
       - name: Code Style PHP
         run: vendor/bin/php-cs-fixer fix --dry-run
 
-#      - name: PHPStan
-#        run: vendor/bin/phpstan analyse
+      - name: PHPStan
+        run: vendor/bin/phpstan analyse
