--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "description": "Webman plugin luoyue/webman-mcp",
   "require": {
     "php": ">=8.1",
-    "mcp/sdk": "~v0.3.0|dev-main",
+    "mcp/sdk": "dev-main",
     "nyholm/psr7": "^1.8",
     "webman/console": "^2.1.12",
     "webman/cache": "^2.1"
